Make train method strangely work (first time)
- Change NeuralNetwork loop in Train methods - make it return boolean (true if training ended by (MSE<minMSE) )
- Add using HashMap for input words - so, create PosFreqPair class ({int,int} ) - position and freq. of word; HashMap<String, PosFreqPair>
- Rename Main.java because add test for NeuralIndex class (now: NeuralNetworkTest.java and OneFileIndexTest.java)
- create NeuralIndex methods, and it works - but how....... (yes, training is working, MSE is reducing, but it works veeery slow, and results... few strange)
- Add some README.md and TODO.md
- Add file of 1000 english words in separate lines